# SWObjects

./: .gitignore  .htaccess  CONFIG  Doxyfile  HEADER.html  LICENSE  Makefile  Makefile.am  POS2BGPMap.hpp  ParserCommon.cpp  ParserCommon.hpp  QueryMapper.hpp  README  README.md  RdfDB.cpp  RdfDB.hpp  RdfQueryDB.cpp  RdfQueryDB.hpp  RdfRemoteDB.hpp  ResultSet.cpp  ResultSet.hpp  RuleInverter.hpp  SAXparser.hpp  SAXparser_expat.hpp  SAXparser_libxml.hpp  SPARQLSerializer.hpp  SPARQLfedScanner.hpp  SPARQLfedScanner.lpp  SQLizer.hpp  SWObjectDuplicator.hpp  SWObjects.cpp  SWObjects.hpp  SWObjects.sln  TurtleSScanner.hpp  TurtleSScanner.lpp  XMLQueryExpressor.hpp  autogen.sh  config.h.in  configure.ac  exs.hpp  (+3 more)
SPARQL_msi/: SPARQL.wxs  SPARQL_msi.vdproj  makeMSI.bat
SPARQLfedParser/: SPARQLfedParser.ypp
TurtleSParser/: TurtleSParser.ypp
apache/: mod_sparul.cpp
autotools.todo/: Makefile  Makefile.mine  Makefile.r1218  Makefile.r1271  TODO
bsbm/: notes  q1-db.rq  q1.rq  q11.rq  q12.rq  q2.rq  q3.rq  q3.sql  q4.rq  q5.rq  q8.rq  ruleMap.rq
const-happy/: RdfDB.hpp  SPARQLfedScanner.hpp  SWObjects.cpp
const-happy/bsbm/: q10.rq
const-happy/tests/: query_spec-assymDisj1.rq  query_spec-filter1.rq  query_spec-leadOpt1.rq  query_spec-opt1.rq
const-happy/win/: FlexBison.rules  test.vcproj
docs/: SPARQL.1
docs/swobj.org/: .htaccess  Overview.html
examples/: .gitignore  functionExtension.cpp  simple.cpp
interface/: SAXparser.hpp  SAXparser_expat.hpp  SAXparser_libxml.hpp  SAXparser_msxml3.hpp  SQLclient.hpp  SQLclient_MSSQL.hpp  SQLclient_MySQL.hpp  SQLclient_ODBC.hpp  SQLclient_Oracle.hpp  SQLclient_Postgres.hpp  SQLclient_main.cpp  WEBagent.hpp  WEBagent_boostASIO.hpp  WEBserver.hpp  WEBserver_asio.hpp  WEBserver_dlib.hpp  WEBserver_dummy.hpp  WEButil.hpp  freetdsSample.cpp
lib/: .gitignore  BRTparser.hpp  BackwardChainingRdfDB.hpp  ChainingMapper.hpp  ExpressionInverter.hpp  JSONSerializer.hpp  JSONresultsParser.bnf  JSONresultsParser.cpp  JSONresultsParser.hpp  JSONresultsParser.ypp  JSONresultsScanner.cpp  JSONresultsScanner.hpp  JSONresultsScanner.lpp  Logging.hpp  MapSetParser.bnf  MapSetParser.cpp  MapSetParser.hpp  MapSetParser.ypp  MapSetScanner.cpp  MapSetScanner.hpp  MapSetScanner.lpp  POS2BGPMap.hpp  ParserCommon.cpp  ParserCommon.hpp  QueryMapper.hpp  RDFaParser.hpp  RdfDB.cpp  RdfDB.hpp  RdfQueryDB.cpp  RdfQueryDB.hpp  RdfRemoteDB.hpp  RdfXmlParser.hpp  ResultSet.cpp  ResultSet.hpp  RuleInverter.hpp  SPARQLAlgebraSerializer.hpp  SPARQLParser.bnf  SPARQLParser.cpp  SPARQLParser.hpp  SPARQLParser.ypp  (+70 more)
lib/JSONresultsParser/: JSONresultsParser.cpp  JSONresultsParser.hpp  JSONresultsParser.ypp  location.hh  position.hh  stack.hh
lib/MapSetParser/: MapSetParser.cpp  MapSetParser.hpp  MapSetParser.ypp  bnf  location.hh  position.hh  stack.hh
lib/SPARQLalgebraParser/: SPARQLalgebraParser.cpp  SPARQLalgebraParser.hpp  SPARQLalgebraParser.ypp  location.hh  position.hh  stack.hh
lib/SPARQLfedParser/: SPARQLfedParser.cpp  SPARQLfedParser.hpp  SPARQLfedParser.ypp  bnf  location.hh  position.hh  stack.hh
lib/SQLParser/: SQLParser.cpp  SQLParser.hpp  SQLParser.ypp  bnf  location.hh  position.hh  stack.hh
lib/SWSexParser/: .gitignore  SWSexParser.ypp  bnf
lib/TrigSParser/: TrigSParser.cpp  TrigSParser.hpp  TrigSParser.ypp  location.hh  position.hh  stack.hh
lib/TurtleSParser/: TurtleSParser.cpp  TurtleSParser.hpp  TurtleSParser.ypp  location.hh  position.hh  stack.hh
swig/: SWObjects.i  SWObjects_setup.py
swig/java/: t_SWObjects.java
swig/lua/: Makefile  t_SWObjects.lua
swig/perl/: t_SWObjects.t
swig/php/: t_SWObjects.php
swig/python/: Makefile.dig  SWObjects_setup.py  t_SWObjects.py
tests/: .gitignore  DM-manifest.txt  DM-report-EARL.ttl  DM-report.xml  IMPORTED_sparql11_csv.hpp  IMPORTED_sparql11_csv.rq  IMPORTED_sparql11_federated_query.hpp  IMPORTED_sparql11_federated_query.rq  IMPORTED_sparql11_federated_query_service3.sh  IMPORTED_sparql11_federated_query_service4a.sh  IMPORTED_sparql11_federated_query_service5.sh  IMPORTED_sparql11_federated_query_service6.sh  IMPORTED_sparql11_json.hpp  IMPORTED_sparql11_json.rq  IMPORTED_sparql11_query.hpp  IMPORTED_sparql11_query.rq  IMPORTED_sparql11_syntax_negative.hpp  IMPORTED_sparql11_syntax_negative.rq  IMPORTED_sparql11_syntax_positive.hpp  IMPORTED_sparql11_syntax_positive.rq  IMPORTED_sparql11_tsv.hpp  IMPORTED_sparql11_tsv.rq  IMPORTED_sparql11_update.hpp  IMPORTED_sparql11_update.rq  RDFXMLEvalPos.tsv  RDFXMLSynNeg.tsv  RDFa-1.html  RDFa-1.ttl  SPARQLTest.hpp  ServerInteraction.hpp  SparqlQueryTestResultSet.hpp  TSVmanifest.hpp  TrigEvalNeg.tsv  TrigEvalPos.tsv  TrigSynNeg.tsv  TrigSynPos.tsv  boost-test.supp  data-sparql11.diff  makeMan.pl  manifest2unitTest.cpp  (+36 more)
tests/7tm_receptors/: IUPHAR_Receptors_ClassC.csv
tests/LDP/: LDBP_pagingExample.ru  LDBP_pagingExample_1_4_client-before.trig  LDBP_pagingExample_4_4_client-before.trig  LDBP_pagingExample_5_4_client-after.trig  LDBP_pagingExample_5_4_client-before.trig  LDBP_pagingExample_5_4_post.ttl
tests/RDFaParser/: APC.html  APC.ttl  gabab.html  gabab.ttl
tests/RdfXmlParser/: Db0_Db0.rdf  Db0_Db0.ttl  Db0_Db1.rdf  Db0_Db1.ttl  Ds_Do.rdf  Ds_Do.ttl  Ds_po.rdf  Ds_po.ttl  SPARQLResult.ttl  Ts_To.rdf  Ts_To.ttl  result-sort-8.ttl
tests/SPARQL/: .gitignore  D.col  D.csv  D.srj  D.srt  D.srx  D.tsv  D.txt  E.srt  G1.ttl  G2.ttl  (+10 more)
trunk/: .htaccess  HEADER.html  POS2BGPMap.hpp  RdfQueryDB.hpp  RuleInverter.hpp  SWObjects.sln  exs.hpp
tweaks/: 4s-insert-query.c  AssertableOperation.diff  BGP_canonicalizer.cpp  MacOS.diff  Makefile  ShortcutBGPduplication.diff  commentUnusedVars.patch  commentUnusedVars.txt  date_math.cpp  feddemo.cpp  mac-clang.diff
util/: SAXparser.hpp  SAXparser_expat.hpp  SAXparser_libxml.hpp  WEBagent.hpp  WEBagent_boostASIO.hpp
win/: FlexBison.props  FlexBison.rules  FlexBison.xml  SPARQL_server.vcproj  SWtransformer.vcproj  config.h  libSWObjects.vcproj  test.vcproj  test_Algebra.vcproj  test_DAWG.vcproj  test_QueryMap.vcproj  test_RDFaParser.vcproj  test_SPARQLSerializer.vcproj  test_WEBagents.vcproj  version.h
(+546 files in other folders)
